ui/css/treeherder.css
/* ... */
.navbar.navbar-dark .navbar-nav > li > a:hover,
.navbar.navbar-dark .navbar-nav > li > a:focus {
    background-color: #1E252B;
    color: #D3D8DA;
}

div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:hover,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
    background-color: #1A4666;
    color: #EEF0F2;
}

#bottom-panel-content {
   position: relative; /* So we can absolutely position the loading overlay */
   height: 60%;

   flex: auto;
   -webkit-flex: auto;

   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}

#bottom-left-panel, #bottom-center-panel {
    background-color: #fff;
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

#bottom-left-top, #bottom-center-top {
    min-height: 33px;
    overflow-y: auto;
}

.pinned-job-count {
    margin-left: 5px;
}

#bottom-left-panel {
    width:260px;
}

#bottom-left-bottom > ul {
    margin: 0px;
    padding: 0px;
    line-height:12px;
}

#bottom-left-panel .content-spacer {
    padding-top: 2px;
    padding-bottom: 4px;
}

#bottom-left-panel ul li {
    padding: 0px 0px 0px 5px;
    line-height: 15px;
    word-wrap: break-word;
}

#bottom-left-panel ul li label{
    padding: 0;
    margin: 2px 0px;
}

#bottom-left-panel .star {
    color: #f0ad4e;
}

#bottom-left-panel em.testfail{ color:red;}

#bottom-left-panel .printlines{padding-bottom: 5px;}

#bottom-left-bottom {
    overflow: auto;
}

#bottom-center-panel {
    -webkit-flex: 1 6;
    flex: 1 6;
    padding:0px;
    min-width: 500px;
}

#bottom-panel nav.navbar.navbar-sub{
    border-top: none;
}

#bottom-center-bottom {
    max-height: calc(100% - 33px);
    -webkit-flex: 1;
    flex: 1;
    display: -webkit-flex;
    display: flex;
}

#bottom-center-bottom > * {
    -webkit-flex: 1;
    flex: 1;
    display: -webkit-flex;
    display: flex;
}

#bottom-center-bottom > * > * {
    -webkit-flex: 1;
    flex: 1;
    display: -webkit-flex;
    display: flex;
}

#bottom-center-bottom > * > * > * {
    -webkit-flex: 1;
    flex: 1;
    display: -webkit-flex;
    display: flex;
}

#bottom-center-panel ul.failure-summary-list{
    overflow: auto;
    width: 100%;
    margin-bottom: 0;
}

ul.failure-summary-list li {
    font-size: 11px;
    background: #ccfaff;
}

ul.failure-summary-list li .btn-xs {
    font-size: 8px;
}

.failure-summary-line-empty {
    padding: 2px 4px 0px;
    background: #ffffff;
}

.failure-summary-line {
    padding: 2px 4px 0px;
}

.failure-summary-bugs {
    padding: 0px 0px 0px 18px;
}

/* We override global anchor color to replicate TBPL here */
.failure-summary-bugs a {
    color: #0000ee;
}
.failure-summary-bugs a:visited {
    color: purple;
}

.failure-summary-bugs button {
    padding: 2px 3px 1px 3px;
}

/* We override global anchor color to replicate TBPL here */
.show-hide-more {
    padding: 0px 0px 0px 37px;
    color: #0000ee;
}

.shadowed-panel {
    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.8) inset;
    margin:0;
}

/*#bottom-menu {position: absolute; right:0; width: 104px}*/

.overlay{
    position:absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width:100%;
    height:100%;
    background-color: rgba(242, 242, 242, 0.25);
    z-index: 9999;
    font-size: 30px;
}

.overlay > div{
    position: relative;
    height:100%;
    width:100%;
}

.overlay > div > span{
    position:absolute;
    top: 40%;
    left:45%;
}

.bottom-shadowed-panel-with-pinboard {
    height: calc(100% - 75px);
}

.bottom-shadowed-panel-without-pinboard {
    height: calc(100% - 20px);
}

.bottom-menu-group {
    width: 98px;
    margin-bottom: 5px;
}

.save-btn {
    width: 81px;
}

.save-btn-dropdown {
    width: 18px;
}

.btn-group + .btn + .save-btn-dropdown {
    margin-left: -5px;
}

/*
 * pinboard
 */

#pinboard-panel {
    background-color: #e6eef5;
    color: #252c33;

    flex: auto;
    -webkit-flex: auto;

    display: flex;
    display: -webkit-flex;
    flex-flow: row;
    -webkit-flex-flow: row;
}

#pinboard-panel .header{
    padding-left: 2px;
    height: 18px;
}

.pinboard-preload-txt {
    color: #bfbfbf;
}

.pinboard-related-bug-preload-txt {
    vertical-align: top;
}

#pinned-job-list{
    position: relative;
    flex: auto;
    -webkit-flex: auto;
    margin: 7px 7px 10px;
}

#pinned-job-list .content{
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 2px;
    overflow: auto;
    background-color: #FFFFFF;
}

#pinboard-related-bugs{
    position: relative;
    width: 200px;
    flex: none;
    -webkit-flex: none;
    margin: 7px 7px 10px;
}

#pinboard-related-bugs .content {
    position: absolute;
    height: 100%;
    width: 200px;
    padding: 2px;
    overflow-x: hidden;
    color: black;
    background-color: #FFFFFF;
}

#pinboard-related-bugs a {
    text-decoration: none;
}

.add-related-bugs-icon {
    margin-right: 2px;
    font-size: 17px;
    color: #98c3da;
}

.add-related-bugs-form {
    position: relative;
    top: -18px;
    left: 20px;
}

.add-related-bugs-input {
    width: 12em;
}

.classification-comment-container {
    margin-top: 5px;
}

.classification-comment-preload-txt {
    position: relative;
    top: -17px;
    left: 5px;
    pointer-events: none;
}

.add-classification-input {
    width: 177px;
    height: 20px;
    padding: 0 0 0 3px;
    border-radius: 0;
    font-size: 12px;
}

.pinboard-open-btn {
    margin-top: -1px;
    background-color: #e6eef5 !important;
    color: #252c33 !important;
}

.pinboard-related-bugs-btn {
    margin-bottom: -1px;
}

.pinboard-related-bugs-btn > .pinboard-related-bugs-link,
.pinboard-related-bugs-btn:hover > .pinboard-related-bugs-link:hover {
    border-top-right-radius: 3px !important;
    border-bottom-right-radius: 3px !important;
}
/* ... */

